# extrae-stats

./: CMakeLists.txt  README.md  application.py  application_data.py  function.py  function_data.py  parsePCF.py  parsePRV.py  parser.py  stats.py  test.cpp  test.sh  thread.py  thread_data.py  trace.cpp  trace.h  trace.xml  viso.py
CMake/: FindExtrae.cmake
ExtraeStats/: CMakeLists.txt  ExtraeStats.pc.in  application_data.py  function_data.py  parseFUNC.py  parsePRV.py  parser.py  stats.py  thread_data.py  trace.cpp  trace.h  viso.py
test-app/: CMakeLists.txt  extrae-trace  test.sh
